overflow fix

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ body {
 
 #card-container {
   display: flex;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 #perfume {
